refactor: update Dockerfile structure and add docker-compose for multi-service setup

--- a/dashboard_backend/Dockerfile
+++ b/dashboard_backend/Dockerfile
@@ -1,20 +1,9 @@
-# Use official Node.js LTS image as base
-FROM node:24.5-alpine
-
-# Create app directory
+FROM node:18-alpine
 WORKDIR /app
-
-# Copy package.json and package-lock.json
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy app source code
+COPY package.json package-lock.json* ./
+RUN npm ci
+# copy all project (also with node_modules if it not in gitignore)
 COPY . .
-
-# Expose port your app listens to
-EXPOSE 3000
-
-# Start the app
-CMD ["npm", "start"]
+ENV PORT=5000
+EXPOSE 5000
+CMD ["node", "server.js"]  
