--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   frontend:
-    build: ./dashboard
+    build: ./dashboard_frontend
     ports:
       - "8000:8000"
     environment:
