--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,10 @@
-name: ci
+name: CI
 
 on:
   push:
-    branches: [ "main" ]   
+    branches: ["master"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["master"]
 
 jobs:
   docker:
@@ -24,9 +24,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      # Build & push backend
+      - name: Build and push backend
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./dashboard_backend
+          file: ./dashboard_backend/Dockerfile
           push: true
-          tags: aminegha10/listen-emails:backend
+          tags: aminegha10/smab_emaildashboard_fullstack-backend:latest
+
+      # Build & push frontend
+      - name: Build and push frontend
+        uses: docker/build-push-action@v6
+        with:
+          context: ./dashboard_frontend
+          file: ./dashboard_frontend/Dockerfile
+          push: true
+          tags: aminegha10/smab_emaildashboard_fullstack-frontend:latest
