--- a/dashboard_frontend/package.json
+++ b/dashboard_frontend/package.json
@@ -30,6 +30,8 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "next-themes": "^0.4.6",
