--- a/dashboard_backend/package.json
+++ b/dashboard_backend/package.json
@@ -14,12 +14,15 @@
     "@google/genai": "^1.9.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "googleapis": "^155.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
