--- a/Listening-email MAG/package.json
+++ b/Listening-email MAG/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/genai": "^1.9.0",
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
