--- a/dashboard_backend/Dockerfile
+++ b/dashboard_backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine
 WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm ci
-# copy all project (also with node_modules if it not in gitignore)
+# copy all project (also with node_modules if it not in dockerignore)
 COPY . .
 ENV PORT=5000
 EXPOSE 5000
