--- a/dashboard_backend/package.json
+++ b/dashboard_backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "cheerio": "^1.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
