--- a/dashboard_backend/package.json
+++ b/dashboard_backend/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "googleapis": "^155.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
