--- a/dashboard_frontend/package.json
+++ b/dashboard_frontend/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.63.0",
     "react-loading-indicators": "^1.0.1",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
