--- a/dashboard_frontend/tsconfig.json
+++ b/dashboard_frontend/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/chart-area-interactive.jsx", "app/StoreProvider.jsx", "app/dashboard/page.jsx", "app/page.jsx", "components/ChartAreaDefault.jsx", "components/section-cards.jsx", "components/nav-main.jsx", "components/app-sidebar.jsx", "components/ui/productsCardInfo.jsx", "components/site-header.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/Charts/SalesOrdersBarchart.jsx", "app/StoreProvider.jsx", "app/dashboard/page.jsx", "app/page.jsx", "components/ChartAreaDefault.jsx", "components/TopCards.jsx", "components/NavBar/nav-main.jsx", "components/SideBar.jsx", "components/ui/productsCardInfo.jsx", "components/site-header.js"],
   "exclude": ["node_modules"]
 }
