--- a/Listening-email MAG/package.json
+++ b/Listening-email MAG/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "googleapis": "^155.0.0",
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
