--- a/Listening-email MED/package.json
+++ b/Listening-email MED/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "googleapis": "^155.0.0",
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
