--- a/dashboard_backend/package.json
+++ b/dashboard_backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "googleapis": "^155.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
