--- a/Listening-email MAG/package.json
+++ b/Listening-email MAG/package.json
@@ -17,12 +17,15 @@
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "googleapis": "^155.0.0",
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
+    "pdf-to-printer": "^5.6.1",
+    "puppeteer": "^24.23.0",
     "react-loading-indicators": "^1.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
