--- a/Listening-email MAG/package.json
+++ b/Listening-email MAG/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "googleapis": "^155.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
